# libre_glocuse_monitor_webapp

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  package-lock.json  package.json  pyproject.toml
.github/workflows/: test.yml
app/: config.py  db.py  libre.py  main.py
app/static/js/: date-utils.js  glucose-utils.js  history-utils.js  history-worker.js
app/templates/: history.html  index.html
tests/: conftest.py  test_config.py  test_db.py  test_libre.py  test_main.py
tests/js/: date-utils.test.js  glucose-utils.test.js  history-utils.test.js  history-worker.test.js
