[project]
name = "sugar"
version = "0.1.0"
description = "Glucose monitor web app using LibreLinkUp"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiosqlite>=0.22.1",
    "fastapi>=0.132.0",
    "jinja2>=3.1.6",
    "pydantic-settings>=2.13.1",
    "pylibrelinkup>=0.9.1",
    "uvicorn[standard]>=0.41.0",
]

[dependency-groups]
dev = [
    "anyio>=4.12.1",
    "httpx>=0.28.1",
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-anyio>=0.0.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.2",
    "types-requests>=2.32.4.20260107",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "TCH",   # flake8-type-checking
    "RUF",   # ruff-specific rules
]

[tool.mypy]
strict = true
plugins = ["pydantic.mypy"]
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["pylibrelinkup.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
